--- a/TradingBot/TradingBot.csproj
+++ b/TradingBot/TradingBot.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TradingBot.Percistance\TradingBot.Percistance.csproj" />
+    <ProjectReference Include="..\TradingBot.Application\TradingBot.Application.csproj" />
   </ItemGroup>
 
 </Project>
