--- a/TradingBot/appsettings.json
+++ b/TradingBot/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CacheKeys": [
+    "TimeStampOffset",
+    "{symbol}_ExchangeInformation"
+  ]
 }
