integrated cache service to store either in memory directly or distriobution all selectable at the code writing

--- a/TradingBot.Percistance/TradingBot.Percistance.csproj
+++ b/TradingBot.Percistance/TradingBot.Percistance.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="StackExchange.Redis" Version="2.9.25" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TradingBot.Domain\TradingBot.Domain.csproj" />
   </ItemGroup>
 
