--- a/TradingBot/appsettings.json
+++ b/TradingBot/appsettings.json
@@ -9,5 +9,9 @@
   "CacheKeys": [
     "TimeStampOffset",
     "{symbol}_ExchangeInformation"
-  ]
+  ],
+  "RedisSettings": {
+    "Host": "localhost:6379",
+    "Password": ""
+  }
 }
